--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -122,5 +122,5 @@ android {
 dependencies {
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.facebook.react:react-native:+"  // From node_modules
-    compile project(path: ':react-native-snackbar')
+    compile project(':react-native-snackbar')
 }
