--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "flow": "flow src",
     "clean": "rm -rf lib",
     "build": "npm run clean && babel src --out-dir lib --ignore src/__tests__",
-    "prepublish": "npm run build"
+    "prepare": "npm run build"
   },
   "jest": {
     "preset": "react-native",
